--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: MyString
-  last_name: MyString
-  email: MyString
+  first_name: lamido
+  last_name: tijjani
+  email: lamido@test.com
   password_digest: <%= BCrypt::Password.create('secret') %>
 
 two:
-  first_name: MyString
-  last_name: MyString
-  email: MyString
+  first_name: tijjani
+  last_name: lamido
+  email: tijjani@test.com
   password_digest: <%= BCrypt::Password.create('secret') %>
