--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run:
+          name: Setup the environment
+          command: cp .sample.env .env
+      - run:
           name: Database setup
           command: bin/rails db:schema:load --trace
       - run:
