--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
           POSTGRES_PASSWORD: lamido_aid_platform_api
     steps:
       - checkout
+      - run:
+          name: Which bundler?
+          command: bundle -v
             # Restore bundle cache
       # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
       - restore_cache:
