--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     parallelism: 1
     docker:
-      - image: circleci/ruby:2.6.3
+      - image: cimg/ruby:2.7.1
         environment: # environment variables for primary container
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
