--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             - aid-platform-api-bundle-v2-
       - run: # Install Ruby dependencies
           name: Bundle Install
-          command: ruby/install-deps
+          command: bundle config set path 'vendor/bundle' || bundle install
       # Store bundle cache for Ruby dependencies
       - save_cache:
           key: aid-platform-api-bundle-v2-{{ checksum "Gemfile.lock" }}
@@ -47,7 +47,9 @@ jobs:
       - run:
           name: Run test in parallel
           command: bundle exec rake
-
+      - run:
+          name: Run lint
+          command: ruby/rubocop-check
 workflows:
   version: 2
   build_and_test:
