ft:add mailer for volunted and fulfilled request with test

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -94,6 +94,8 @@ Metrics/MethodLength:
 Metrics/BlockLength:
   Exclude:
     - 'db/schema.rb'
+    - 'config/environments/production.rb'
+    - 'config/environments/development.rb'
 
 # Offense count: 1
 # Configuration parameters: IgnoredMethods.
