--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,7 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= Rails.application.credentials.redis[:url] %>
+  port: <%= Rails.application.credentials.redis[:port] %>
+  password: <%= Rails.application.credentials.redis[:password] %>
   channel_prefix: aid_platform_api_production
